--- a/index.css
+++ b/index.css
@@ -4,11 +4,11 @@
     padding: 0;
 }
 img {
-    width: 25%;
+    width: 15%;
     padding: 0%;
 }
 html {
-    font-size: 62.5%;
+    font-size: 50%;
 }
 header {
     background-image: url(./asset/img/Capture\ d’écran\ 2022-05-31\ 092411.png);
@@ -18,10 +18,10 @@ header {
 }
 
 header h1 {
-    text-align: center;
-    
-
-
+    text-align: right;
+    font-family: Arial, Helvetica, sans-serif;
+    color: darkgrey;
+    font-size: 9rem;
 }
 .section1 {
     display: grid;
@@ -31,5 +31,23 @@ header h1 {
     grid-row-gap: 0px;
     }
     
-    .div1 { grid-area: 2 / 2 / 11 / 4; }
-    .div2 { grid-area: 2 / 5 / 11 / 7; }
+    .div1 { grid-area: 2 / 2 / 11 / 4; 
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+        font-size: 1rem;       
+    }
+
+    .div2 { grid-area: 2 / 5 / 11 / 7; 
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+        font-size: 1rem;
+    }
+    .div2 img {
+      
+}
+    
+    .bouton {
+        border-radius: 12px;
+        padding: 14px 40px;
+        background-color:bisque;
+        color: black;
+        border: 2px solid #555555;
+        }
